# secure-document-rag

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: audit.py  auth.py  chunking.py  config.py  database.py  document_parser.py  main.py  models.py  providers.py  repository.py  vector_store.py
app/static/: app.css  app.js  index.html
docs/: functional-guide.md  technical-guide.md
tests/: test_chunking.py  test_config.py  test_vector_filter.py
